--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ bun.lockb
 .opencode/
 opencode-agents/
 claude-agents/
+# Allow converted plugins
+!plugins/anthropic-converters/converted/
 
 # Standard ignore patterns
 target/
